Bug 471354 - Integrated Konsole has wrong size
Summary: Integrated Konsole has wrong size
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: user interface (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-22 21:41 UTC by Enrique Artal
Modified: 2023-11-12 11:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Enrique Artal 2023-06-22 21:41:31 UTC
SUMMARY
After compiling from sources, terminal presents some issues 


STEPS TO REPRODUCE
1. Open kile
2. Click for terminal, have window is blank and at standard size, last line maybe invisible
3.  Folder for terminal is not the one of the active file

OBSERVED RESULT
See above

EXPECTED RESULT
Normal behavior of konsole inside kile

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 38
(available in About System)
KDE Plasma Version: 5.27.5
KDE Frameworks Version:  5.107.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 Enrique Artal 2023-06-29 14:40:00 UTC
Same issues after today changes. Eliminating the changes in konsolewidgets.cpp solves the problem
Comment 2 Enrique Artal 2023-08-15 11:05:41 UTC
I see no change after last commits, I wonder if it can be caused by my configuration. I added Nicolas Fella as cc
Comment 3 Enrique Artal 2023-11-05 11:06:06 UTC
I checked with the last commits of Christopher Grüninger (added as cc) that the problems persist. I wonder if somewhere horizontal and vertical lengths have been exchanged. It is also possible that it is a consequence of other settings but I created a new user and the same happens.
Comment 4 gruenich (Christoph Grüninger) 2023-11-05 18:02:48 UTC
I can confirm the regression. Konsole has the wrong size. Thanks for reporting!

I think the regression was introduced with 79ef2b5b (Port away from deprecated KPluginLoader)
The last commit where it is working for me is fd3ff5ac, the parent the commit above. @enriquie, can you confirm it is the commit?
Comment 5 Enrique Artal 2023-11-05 20:02:29 UTC
Yes, actually, i have a branch in my computer without the changes related to konsole, and it works; I tried to figure out where the problem was but I failed. Thanks four your nice work.
Comment 6 Michel Ludwig 2023-11-12 11:04:02 UTC
Git commit cb5ec2ee84d8b9438dd88e21e235eed2287e5020 by Michel Ludwig.
Committed on 12/11/2023 at 12:02.
Pushed by mludwig into branch 'master'.

Load and instantiate 'konsolepart' via KPluginFactory

(analogously to how Kate is doing it)

M  +11   -7    src/widgets/konsolewidget.cpp

https://invent.kde.org/office/kile/-/commit/cb5ec2ee84d8b9438dd88e21e235eed2287e5020
Comment 7 Enrique Artal 2023-11-12 11:48:10 UTC
Thanks!