Load and instantiate 'konsolepart' via KPluginFactory

(analogously to how Kate is doing it)

BUG: 471354